<resources>
    <string name="app_name" translatable="false">Cirzzar Curr</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="contact_us" translatable="false">Contact Us</string>
    <string name="action_support">Support</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_to_cart">Add to cart</string>

    <string name="pizza_pepperoni">Pepperoni</string>
    <string name="pizza_veggie">Veggie</string>
    <string name="pizza_bbq" translatable="false">BBQ</string>
    <string name="pizza_hawaiian">Hawaiian</string>
    <string name="pizza_margherita">Margherita</string>
    <string name="size">Size:</string>
    <string name="size_big">Big</string>
    <string name="size_medium">Medium</string>
    <string name="size_small">Small</string>
    <string name="order_now">Order Now</string>
</resources>